<resources>
    <string name="app_name">Microclimate Monitoring System</string>
    <string name="label_options">Options</string>
    <string name="label_details">Details</string>
    <string name="label_statistics">Statistics</string>
    <string name="main_menu">Main Menu</string>
    <string name="app_version">App version: 1.0</string>
    <string name="available_devices">Available devices</string>
    <string name="scan_devices">+</string>
    <string name="select_sensor">Select sensor</string>
    <string name="find_values">Find</string>
    <string name="actual_values">Actual</string>
    <string name="measurements">Measurements</string>
    <string name="statistics">Statistics</string>
    <string name="arithmetic_mean">Arithmetic Mean</string>
    <string name="dispersion">Dispersion</string>
    <string name="standard_deviation">Standard Deviation</string>
    <string name="maximum_value">Maximum Value</string>
    <string name="minimum_value">Minimum value</string>
    <string name="statistics_for">Statistics for %1$s</string>
    <string name="since_to">Since %1$s to %2$s</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="white_theme">White</string>
    <string name="button_save">Save</string>
    <string name="select_bounds_of_measurements">Select bounds of measurements:</string>
    <string name="no_measurements">Measurements haven`t been found!</string>
    <string name="warning_title">Warning message</string>
    <string name="CO_high">CO concentration is very high!</string>
    <string name="successful_download">Data were successfully downloaded!</string>
    <string name="server_unavailable_or_incorrect_input">Server doesn`t respond (or incorrect input), so earlier saved data were downloaded!</string>
    <string name="server_unavailable">Server doesn`t respond, so earlier saved data were downloaded!</string>
    <string name="successful_update">Data were successfully updated!</string>
    <string name="no_sensors_in_device">This device has no sensors!</string>
    <string name="no_devices">Devices haven`t been found!</string>
    <string name="no_sensors">Sensors haven`t been found!</string>
    <string name="ip_address">Server IP</string>
    <string name="port">Port</string>
</resources>