<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:id="@+id/statistics_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/statistics_for"
        android:textStyle="bold"
        android:textSize="23sp"/>

    <TextView
        android:id="@+id/statistics_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/since_to"
        android:textSize="18sp"/>

    <TableRow
        android:layout_gravity="center"
        android:weightSum="4.0"
        android:paddingTop="5dp">
        <TextView
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/arithmetic_mean"/>
        <TextView
            android:id="@+id/arithmetic_mean_value"
            android:gravity="center_horizontal"
            android:text="25.0"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:weightSum="4.0">
        <TextView
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/dispersion"/>
        <TextView
            android:id="@+id/dispersion_value"
            android:gravity="center_horizontal"
            android:text="25.0"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:weightSum="4.0">
        <TextView
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/standard_deviation"/>
        <TextView
            android:id="@+id/standard_deviation_value"
            android:gravity="center_horizontal"
            android:text="25.0"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:weightSum="4.0">
        <TextView
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/maximum_value"/>
        <TextView
            android:id="@+id/maximum_value"
            android:gravity="center_horizontal"
            android:text="25.0"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:weightSum="4.0"
        android:paddingBottom="5dp">
        <TextView
            android:layout_weight="2.0"
            android:gravity="center_horizontal"
            android:text="@string/minimum_value"/>
        <TextView
            android:id="@+id/minimum_value"
            android:gravity="center_horizontal"
            android:text="25.0"
            android:layout_weight="2.0"/>
    </TableRow>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statistics_line_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.github.mikephil.charting.charts.LineChart>

</TableLayout>