<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/details_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:text="RaspberryPi"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/details_device_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="192.168.0.115"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textview_select_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:text="@string/select_sensor"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner_select_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/select_bounds_of_measurements"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/edittext_first_bound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_horizontal"
            android:text="02-05-2023"
            android:inputType="datetime" />

        <EditText
            android:id="@+id/edittext_second_bound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_horizontal"
            android:text="04-05-2023"
            android:inputType="datetime"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <Button
            android:id="@+id/actual_measurements_button"
            android:maxWidth="150dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/actual_values"/>
        <Button
            android:id="@+id/find_measurements_button"
            android:maxWidth="150dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/find_values"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_measurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:text="@string/measurements"
        android:textSize="18sp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_scrollview"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/border">
        <TextView
            android:id="@+id/textview_measurements_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:padding="5dp"
            android:textSize="15sp"/>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/statistics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/statistics"/>

</LinearLayout>